[project]
name = "dispatch-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.6",
  "prometheus-client>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["**/*.py"]
